# HW15_scrapy_fastapi

./: main.py  pyproject.toml  readme.md
config/: config.yaml
db/: config.py  connect.py
migrations/: env.py
migrations/versions/: 696d6ea780fd_init.py
parse_news/: __init__.py  parse_app.py  pipline.py
parse_news/resources/: obozrevatel_spider.py  upravda_spider.py
src/: models.py
src/libs/: constants.py
src/repository/: articles.py
src/router/: articles.py
src/schemas/: articles.py
